fixed pdf overflow

--- a/src/components/styles/file-card.css
+++ b/src/components/styles/file-card.css
@@ -4,10 +4,10 @@
     border-radius: 10px;
     color: black;
     text-decoration: none;
-    width: 188px;
+    width: 196px;
     height: 100%;
     display: inline-block;
-    margin-right: 30px;
+    margin-right: 18px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
     background-color: white;
 }
